--- a/worldwildlifespecies.html
+++ b/worldwildlifespecies.html
@@ -790,9 +790,9 @@
     </div>
 </footer>
 
-<script src="sass-boilerplate/js/header.js"></script>
+<script src="js/header.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="sass-boilerplate/js/worldwildlifespecies.js"></script>
+<script src="js/worldwildlifespecies.js"></script>
 </body>
 </html>
