--- a/worldwildlife.html
+++ b/worldwildlife.html
@@ -599,7 +599,7 @@
     </div>
 </footer>
 
-<script src="sass-boilerplate/js/header.js"></script>
+<script src="js/header.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
