--- a/worldwildlifearctic.html
+++ b/worldwildlifearctic.html
@@ -1074,8 +1074,8 @@
     </div>
 </footer>
 
-<script src="sass-boilerplate/js/header.js"></script>
-<script src="sass-boilerplate/js/worldwildlifearctic.js"></script>
+<script src="js/header.js"></script>
+<script src="js/worldwildlifearctic.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="sass-boilerplate/stylesheets/vendors/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
